docs: BUILDING.md for JDK 21 toolchain; ledger + Python 3 recipe notes
- BUILDING.md: JDK 21 (auto-provisioned toolchain; JDK 11+ bootstraps
  Gradle), flagless 'java -jar' via the Add-Opens manifest, GraalPython
  banner, wire-compat smoke instructions
- POLYGLOT_INTEGRATION.md: progress ledger updated (build, node
  management restoration, wire-compat proof, demo recipes); HostAccess
  hardening explicitly noted as out of scope (same trust model as
  Jython); §6 rewritten as practical Python 3 recipe-authoring notes